# trajectory_planning

./: frames_2025-05-21_18.01.06.gv  frames_2025-05-24_15.48.40.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.5.6
install/moveit_chomp_optimizer_adapter/lib/: libmoveit_chomp_optimizer_adapter.so.2.5.6
install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.5.6  libmoveit_butterworth_filter.so.2.5.6  libmoveit_collision_detection.so.2.5.6  libmoveit_collision_detection_bullet.so.2.5.6  libmoveit_collision_detection_fcl.so.2.5.6  libmoveit_collision_distance_field.so.2.5.6  libmoveit_constraint_samplers.so.2.5.6  libmoveit_dynamics_solver.so.2.5.6  libmoveit_kinematic_constraints.so.2.5.6  libmoveit_kinematics_metrics.so.2.5.6  libmoveit_planning_interface.so.2.5.6  libmoveit_planning_request_adapter.so.2.5.6  libmoveit_planning_scene.so.2.5.6  libmoveit_robot_model.so.2.5.6  libmoveit_robot_state.so.2.5.6  libmoveit_robot_trajectory.so.2.5.6  libmoveit_test_utils.so.2.5.6  libmoveit_trajectory_processing.so.2.5.6  libmoveit_transforms.so.2.5.6
install/moveit_hybrid_planning/lib/: libforward_trajectory_plugin.so.2.5.6  libmotion_planning_pipeline_plugin.so.2.5.6  libmoveit_global_planner_component.so.2.5.6  libmoveit_hybrid_planning_manager.so.2.5.6  libmoveit_local_planner_component.so.2.5.6  libreplan_invalidated_trajectory_plugin.so.2.5.6  libsimple_sampler_plugin.so.2.5.6  libsingle_plan_execution_plugin.so.2.5.6
install/moveit_kinematics/lib/: libmoveit_cached_ik_kinematics_base.so.2.5.6  libmoveit_cached_ik_kinematics_plugin.so.2.5.6  libmoveit_lma_kinematics_plugin.so.2.5.6  libmoveit_srv_kinematics_plugin.so.2.5.6
install/moveit_planners_chomp/lib/: libmoveit_chomp_interface.so.2.5.6
install/moveit_planners_ompl/lib/: libmoveit_ompl_interface.so.2.5.6  libmoveit_ompl_planner_plugin.so.2.5.6
install/moveit_ros_benchmarks/lib/: libmoveit_ros_benchmarks.so.2.5.6
install/moveit_ros_control_interface/lib/: libmoveit_ros_control_interface_empty_plugin.so.2.5.6  libmoveit_ros_control_interface_gripper_plugin.so.2.5.6  libmoveit_ros_control_interface_plugin.so.2.5.6  libmoveit_ros_control_interface_trajectory_plugin.so.2.5.6
install/moveit_ros_move_group/lib/: libmoveit_move_group_capabilities_base.so.2.5.6  libmoveit_move_group_default_capabilities.so.2.5.6
log/: latest_build
src/cobot_moveit_config/: CMakeLists.txt  package.xml
src/hello_moveit/: CMakeLists.txt
src/hello_moveit/launch/: gazebo.launch.py
src/hello_moveit/src/: joint_to_ee_pose.cpp  scene_initializer.cpp  simple_planning.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/lrmate_200id-main/: CMakeLists.txt  README.md
src/lrmate_200id-main/models/: lrmate_on_table.urdf.xacro
src/lrmate_200id-main/models/ConveyorChassis/: model.config  model.sdf
src/lrmate_200id-main/models/ConveyorChassis/meshes/: ConveyorBelt_belt_surface.stl
src/lrmate_200id-main/urdf/: LRMate-200iD_convex.urdf  LRMate-200iD_low-res.urdf
src/other/: active_motion_zeroed.csv  interpolated_trajectory_100Hz.csv  joint_numerical_differentiation.py  joint_state_renew.py  joint_states.csv  monitor_joint_trajectory.py  planned_trajectory.csv  planned_trajectory_renew.py  plot_joint_comparison.py  plot_joint_states.py  plot_planned_trajectory.py
(+546 files in other folders)
